# flight-recorder

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: maven-release.yml  nuget-publish.yml  nuget-release.yml  php-split.yml  test.yml
csharp/: .gitignore  FlightRecorder.sln  README.md
csharp/samples/: ToyApp.cs
csharp/src/FlightRecorder/: Boundary.cs  Clock.cs  Compat.cs  Errors.cs  Extensions.cs  FlightRecorder.csproj  Invariants.cs  Json.cs  Mutate.cs  Proxy.cs  Record.cs  Replay.cs  Serial.cs  Snapshot.cs  Trace.cs  TraceRewriter.cs  Tracer.cs
csharp/src/FlightRecorder/Spec/: Validate.cs
csharp/tests/FlightRecorder.Tests/: FlightRecorder.Tests.csproj  ForbidSidecarTests.cs  MutationTests.cs  RecordReplayTests.cs  SemTests.cs  SerialTests.cs  SpecFixtureTests.cs  TestSupport.cs  TraceInvariantTests.cs  TraceTests.cs  TracedToy.cs
csharp/tools/GenFixtures/: GenFixtures.csproj  Program.cs
docs/: index.html  slides.html
flight_recorder/: README.md  __init__.py  boundary.py  design.py  invariants.py  mutate.py  pytest_plugin.py  record.py  replay.py  serial.py  session.py
go/: README.md  fixtures_test.go  go.mod  instrument.go  invariants.go  parity_test.go  reading.go  record.go  record_test.go  replay.go  replay_test.go  toy_test.go  trace.go  trace_test.go  tracedtoy_test.go
go/serial/: serial.go  serial_test.go  trace.go  trace_test.go
go/spec/: validate.go  validate_test.go
go/tracehook/: tracehook.go  tracehook_test.go
java/: README.md  pom.xml
java/src/main/java/io/github/xag/flightrecorder/: Boundary.java  Errors.java  Invariants.java  Json.java  Mutate.java  Recorder.java  Recording.java  Replay.java  Serial.java  Sink.java  Snapshot.java  Trace.java  TraceHook.java  TraceValue.java  Tracer.java
java/src/main/java/io/github/xag/flightrecorder/spec/: Validate.java
java/src/test/java/io/github/xag/flightrecorder/: FixturesTest.java  ForbidTest.java  MutationTest.java  RecordReplayTest.java  SemTest.java  SerialTest.java  Toy.java  TraceTest.java  WrapTest.java
java/src/test/java/io/github/xag/flightrecorder/spec/: ValidateTest.java
java/src/test/resources/traced/: TracedToy.java
js/: README.md  package.json
js/src/: errors.js  index.js  invariants.js  record.js  render.js  replay.js  serial.js  trace.js  trace.worker.js
js/src/spec/: validate.js
js/test/: invariants.test.mjs  limits.test.mjs  record.test.mjs  render-forbid.test.mjs  render.test.mjs  replay.test.mjs  sem.test.mjs  tape-spec.test.mjs  toy.mjs  trace.test.mjs  traced-app.mjs
ledger/: __init__.py  check.py  roll.json  tree.py
php/: README.md  composer.json  phpunit.xml
php/src/: Boundary.php  CallBuffer.php  CallView.php  CallableSink.php  ClockHandle.php  EffectHandle.php  Feed.php  FlightError.php  ForbiddenValue.php  Instrument.php  Invariant.php  InvariantReport.php  InvariantResult.php  Invariants.php  Json.php  Mutate.php  MutateHandle.php  Obs.php  ProbeUnanswerable.php  RandHandle.php  ReadHandle.php  Recorder.php  Recording.php  Replay.php  ReplayDivergence.php  ReplayReport.php  ReplayedEffectError.php  SemPair.php  Serial.php  Sink.php  Snapshot.php  SpanNode.php  Trace.php  TraceFrame.php  TraceHook.php  TraceRun.php  TraceSink.php  Tracer.php  Trajectory.php  Truncated.php  (+2 more)
php/src/Spec/: Validate.php
php/tests/: FixturesTest.php  ForbidTest.php  Mode.php  MutationTest.php  RecordReplayTest.php  SemTest.php  SerialTest.php  TempDir.php  Toy.php  ToyError.php  TraceTest.php  ValidateTest.php  WrapTest.php  autoload.php
php/tests/resources/: TracedToy.php
spec/: tape-v1.md  validate.py
spec/fixtures/: dotnet-sem-toy.jsonl  dotnet-toy.jsonl  go-sem-toy.jsonl  go-toy.jsonl  java-sem-toy.jsonl  java-toy.jsonl  node-sem-toy.jsonl  node-toy.jsonl  php-sem-toy.jsonl  php-toy.jsonl  python-sem-toy.jsonl  python-toy.jsonl
tests/: canonical.py  test_crash_safe.py  test_cross_runtime.py  test_cross_runtime_go.py  test_design.py  test_gating.py  test_invariants.py  test_method_effects.py  test_mutation.py  test_opaque_addresses.py  test_pytest_plugin.py  test_redaction.py  test_roundtrip.py  test_sem.py  test_sem_replay.py  test_session.py  test_sink.py  test_tape_spec.py  toy_effects.py  toy_tools.py
tests/fixtures/: defects.html  design-defects.jsonl  session-surface.jsonl
