[project]
name = "flight-recorder"
version = "0.8.0"
description = "Record tool calls at an app's nondeterminism boundary; replay them deterministically with every internal variable observable"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

# The design checker: claims over a render tape. `flight-design tape.jsonl --tokens tokens.json`.
# It reads a tape, so it needs no browser and no dependencies — only the CAPTURE needs a browser.
[project.scripts]
flight-design = "flight_recorder.design:run_cli"

# Loaded by pytest when installed; inert unless `flight_recordings` is set (see
# flight_recorder/pytest_plugin.py). pytest is never imported at library import time.
[project.entry-points.pytest11]
flight_recorder = "flight_recorder.pytest_plugin"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_recorder"]
