[project]
name = "flight-recorder"
version = "0.8.0"
description = "Record tool calls at an app's nondeterminism boundary; replay them deterministically with every internal variable observable"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

# The design checker: claims over a render tape. `flight-design tape.jsonl --tokens tokens.json`.
# It reads a tape, so it needs no browser and no dependencies — only the CAPTURE needs a browser.
[project.scripts]
flight-design = "flight_recorder.design:run_cli"

# Loaded by pytest when installed; inert unless `flight_recordings` is set (see
# flight_recorder/pytest_plugin.py). pytest is never imported at library import time.
[project.entry-points.pytest11]
flight_recorder = "flight_recorder.pytest_plugin"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
# The docs ledger — the doc-architecture decision and its two rules as data a check can go
# red on. Design-time only (never shipped in the wheel), same as everywhere in the estate.
#     uv run --group ledger python -m ledger.check
ledger = ["quern"]

[tool.uv.sources]
quern = { git = "https://github.com/xag/quern", rev = "3233a0f" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_recorder"]
