[project]
# PyPI has no scopes, so the npm scope becomes a prefix: @xag/flight-recorder -> xag-flight-recorder.
# The bare name is not available — PyPI collapses hyphens, colliding with `flightrecorder` (2014,
# paragliding GPS loggers). The import name stays `flight_recorder` on every runtime.
name = "xag-flight-recorder"
version = "0.8.0"
description = "Record tool calls at an app's nondeterminism boundary; replay them deterministically with every internal variable observable"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

# The design checker: claims over a render tape. `flight-design tape.jsonl --tokens tokens.json`.
# It reads a tape, so it needs no browser and no dependencies — only the CAPTURE needs a browser.
[project.scripts]
flight-design = "flight_recorder.design:run_cli"

# Loaded by pytest when installed; inert unless `flight_recordings` is set (see
# flight_recorder/pytest_plugin.py). pytest is never imported at library import time.
[project.entry-points.pytest11]
flight_recorder = "flight_recorder.pytest_plugin"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
# The docs ledger — the doc-architecture decision and its two rules as data a check can go
# red on. Design-time only (never shipped in the wheel), same as everywhere in the estate.
#     uv run --group ledger python -m ledger.check
ledger = ["quern"]

[tool.uv.sources]
quern = { git = "https://github.com/xag/quern", rev = "c6d8cbc" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_recorder"]

# The sdist ships the Python distribution, not the repo. The other five runtimes (csharp, go,
# java, js, php) live in the tree beside this one, and their build outputs — 157 files, 2.6MB of
# compiled .NET under bin/ and obj/ — were being swept in by the default "everything tracked"
# rule. A PyPI version is write-once, so the scope is stated explicitly rather than inherited.
[tool.hatch.build.targets.sdist]
only-include = [
    "flight_recorder",
    "spec",
    "tests",
    "conftest.py",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CONTRIBUTING.md",
    "SECURITY.md",
]
exclude = ["**/__pycache__"]
